<resources>
    <string name="app_name_new">Beauty App</string>
    <string name="facebook_app_id">658017587735861</string>
    <string name="fb_login_protocol_scheme">fb658017587735861</string>
    <string name="hello">Hello Again!</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_first_name">Firstname</string>
    <string name="lbl_last_name">Lastname</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_retype_password">Confirm Password</string>
    <string name="str_login">Login</string>
    <string name="lbl_register">Register</string>
    <string name="str_create">Signup</string>
    <string name="str_or">Or</string>
    <string name="str_sigin_using">Sign in Using</string>
    <string name="str_face_book">Facebook</string>
    <string name="str_google">Google</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_terms">Terms</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_search">Search</string>
    <string name="msg_wait">Please Wait...!!!</string>
    <string name="msg_error">Something went wrong.</string>
    <string name="msg_no_connnection">Internet Connection Not Available</string>
    <string name="extra_city_id">CityId</string>
    <string name="extra_city_name">CityName</string>
    <string name="extra_latitude">Latitude</string>
    <string name="extra_longitude">Longitude</string>
    <string name="extra_from_menu">From Menu</string>
    <string name="string_some_thing_wrong">Something went wrong.</string>
    <string name="msg_no_data">No data found</string>
    <string name="msg_no_internet">Internet Connection Not Available</string>
    <string name="title_select_location">Select Location</string>
    <string name="title_select_category">Select Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_navigation">Navigation</string>
    <string name="image">image</string>
    <string name="duplicate">Duplicate</string>
    <string name="schedule">Schedule</string>
    <string name="delete">Delete</string>
    <string name="menu_review">Review</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_gallery">GALLERY</string>
    <string name="menu_info">Info</string>
    <string name="menu_details">DETAIL</string>
    <string name="menu_offers">OFFER</string>
    <string name="rate_us">Rate Us</string>
    <string name="skip">Skip</string>
    <string name="fb_app_id">658017587735861</string>
    <string name="string_getting_json_title">Please wait...</string>
    <string name="str_no_data">No data avaliable.</string>
    <string name="search">Search]</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">GPS is not enable</string>
    <string name="open_location_settings">Open Location</string>
    <string name="lbl_Save">Save</string>
    <string name="forgot">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="who_we_are_title">Who We Are</string>
    <string name="cont1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="emailUs">Email Us</string>
    <string name="contact_email">beautyapp@beautylink.com</string>
    <string name="callUs">Call Us</string>
    <string name="contact_num">+91 98765 43210</string>
    <string name="website">Website</string>
    <string name="website_link">www.beautylink.com</string>
    <string name="RateUs">Rate Us</string>
    <string name="rate_app_content">Rate us to our app.</string>
    <string name="change_pass">Change Password</string>
    <string name="lbl_conf_password">Confirm Password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="str_save">Save</string>
    <string name="Error">Error</string>
    <string name="help_us_to_do_better">Help us to do better</string>
    <string name="quick_feedback">Mind giving us a quick feedback?</string>
    <string name="nope">Nope</string>
    <string name="yeahSure">Yeah, Sure!</string>
    <string name="no_internet_connection">No internet connection. Please check your internet connection.</string>
    <string name="setting">Setting</string>
    <string name="no_record_found">No record found</string>
    <string name="wifi">Wifi</string>
    <string name="card">Card</string>
    <string name="tv">TV</string>
    <string name="ac">AC</string>
    <string name="parking">Parking</string>
    <string name="offers">Offers</string>
    <string name="amenities">Amenities</string>
    <string name="km_away">0 KM Away</string>
    <string name="opening_time">Open Till 9:30 PM</string>
    <string name="orconnectopt">---------- OR CONNECT WITH ----------</string>
    <string name="dont_have_acc">Dont have an account ?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="nav_offers">Offers</string>
    <string name="bookings">Bookings</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="user_email_id">beauty@beauty.com</string>
    <string name="location">Location</string>
    <string name="apply">Apply</string>
    <string name="use_my_location_select">Use my location (Select)</string>
    <string name="or">Or</string>
    <string name="change_language">Change Language</string>
    <string name="changepassword">Change Password</string>
    <string name="change_category">Change Category</string>
    <string name="changelocation">Change Location</string>
    <string name="pushnotification">Push Notification</string>
    <string name="follow_us">Follow Us</string>
    <string name="review">Review</string>
    <string name="empty_state_content">Empty state content</string>
    <string name="try_again">Try again</string>
    <string name="salloon_name">Unknown Salloons</string>
    <string name="welcome_guest">WelCome Guest!</string>
    <string name="kmaway">km away</string>
    <string name="open_till">Open Till</string>
    <string name="english">English</string>
    <string name="italy">Italy</string>
    <string name="arabic">Arabic</string>
    <string name="select_lunguage">Select Language</string>
    <string name="rate_never">Never</string>
    <string name="rate_later">Later</string>
    <string name="rate_now">Now</string>
    <string name="ok">OK</string>
    <string name="app_must_update">App New Version Avialble You must Update</string>
    <string name="app_new_version_aviale">App New Version Avialble You want Update?</string>
    <string name="cancel">Cancel</string>
    <string name="string_cheack_your_internet_conection">Check Your Internet Connection</string>
    <string name="string_internet_connection_not_available">Internet Connection Not Available</string>
    <string name="Profile">Profile</string>
    <string name="Offers">Offers</string>
    <string name="Off">% Off</string>
    <string name="Bookings">Bookings</string>
    <string name="AboutUs">About Us</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="str_enter_mobile_number">Please enter mobile number</string>
    <string name="str_valid_mobile_number">Mobile number should contain 8 to 13 digits</string>
    <string name="str_enter_first_name">Please enter first name</string>
    <string name="str_enter_last_name">Please enter last name</string>
    <string name="str_enter_email">Please enter email</string>
    <string name="str_valid_email_enter">Please enter Valid email</string>
    <string name="str_enter_password">Please enter password</string>
    <string name="str_enter_password_must_have_six_character">Password must have 6 or more characters </string>
    <string name="str_enter_confrim_password_must_have_six_character">Confirm password must have 6 or more characters</string>
    <string name="str_confrim_password">Please enter confirm password</string>
    <string name="str_pass_and_conf_pass_does_not_match">Password and confirm password does not match</string>
    <string name="please_select_date">Please select date</string>
    <string name="Please_select_time">Please select time</string>
    <string name="error_while_booking_apt">Error zwhile booking appointment.</string>
    <string name="are_you_sure_cancel_booking">Are you sure to cancel this booking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="atleast_one_category">Please select atleast one category.</string>
    <string name="selected_item">Selected Item :</string>
    <string name="Please_enter_old_password">Please enter old password</string>
    <string name="Please_enter_new_password">Please enter new password</string>
    <string name="Please_enter_confirm_password">Please enter confirm password</string>
    <string name="passwrod_not_match">Password does not match</string>
    <string name="please_enter_password">Please enter valid password</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="passwords_must_be_same">Please enter new and confirm password are same.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="Please_provide_permission">Please provide permission to run the application.!!</string>
    <string name="device_not_supported">This device is not supported.</string>
    <string name="provide_permission_for_location">Please provide permission to get your location.!!</string>
    <string name="Please_enter_first_name">Please enter first name</string>
    <string name="Please_enter_last_name">Please enter last name</string>
    <string name="Please_enter_email">Please enter email</string>
    <string name="fb_success_msg">You are successfully registered using facebook account, you can now simply login by clicking on facebook button.</string>
    <string name="google_success_msg">You are successfully registered using google account, you can now simply login by clicking on google button.</string>
    <string name="successful">Successful</string>
    <string name="login_before_review">Please login in your account before giving review.</string>
    <string name="give_some_rating">Please give some rating.</string>
    <string name="give_review">Please give Review.</string>
    <string name="select_services">Select Services</string>
    <string name="login_first">Please login first.</string>
    <string name="select_atlease_one_staff">Please select atleast one staff.</string>
    <string name="str_email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile</string>
    <string name="already_acc">Already have account</string>
    <string name="pls_enter_reg">Please Enter Register</string>
    <string name="email_id">Email Id</string>
    <string name="letsCreat">Lets Create</string>
    <string name="a_new_account">New Account</string>
</resources>